# project-2_zhukov_25-555

./: .gitignore  README.md  project2_rec  pyproject.toml
src/primitive_db/: constants.py  core.py  decorators.py  engine.py  main.py  parser.py  utils.py
src/primitive_db/data/: db_meta.json  users.json
