[tool.poetry]
name = "project-2-zhukov-25-555"
version = "0.1.0"
description = "Homework 2 Python Course MIPHI"
authors = ["Жуков Тимофей <dmerz22848@gmail.com>"]
packages = [
    { include = "src", from = "." },
]

[tool.poetry.dependencies]
python = ">=3.11"
prompt = "^0.4.1"
prettytable = "^3.16.0"

[tool.poetry.scripts]
database = "src.primitive_db.main:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 88
target-version = "py312"
exclude = ["venv", ".venv", "dist", "__pycache__"]

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = [] 

[dependency-groups]
dev = [
    "ruff (>=0.14.2,<0.15.0)"
]
